--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ repositories {
 dependencies {
 	testCompile 'junit:junit:4.12'
   compile 'com.google.dagger:dagger:2.0'
+	compile 'com.google.dagger:dagger-compiler:2.0'
 }
